Footer right wrap Fixed

--- a/style.css
+++ b/style.css
@@ -210,42 +210,6 @@ body{
     background-color: #F46432;
     overflow:hidden;
     margin: 0 0px;      
-    /* ul{
-        list-style: none;
-        position:absolute;
-        width:100%;
-        height:100%;
-        box-shadow:inset 0 0 1px rgba(0,0,0,.05);
-    } */
-
-    /* li{
-        position:relative;
-        float:left;
-        width:33.33%;
-        height:50%;
-    } */
-    /* li a{
-        position:absolute;
-        width:70%;
-        height:70%;
-        margin:15%;
-        background:#ddd;
-        box-shadow:0 0 1px 1px rgba(0,0,0,.2);
-        transform:rotate(4deg);
-        transition:all .5s ease-in-out;
-        -webkit-transition:all .5s ease-in-out;
-        -moz-transition:all .5s ease-in-out;
-        -o-transition:all .5s ease-in-out;
-        -ms-transition:all .5s ease-in-out;
-    } */
-    /* li a:hover{
-        width:90%;
-        height:90%;
-        margin:5%;
-        transform:rotate(0deg);
-        background:#f5f5f5;
-        box-shadow:0 0 10px 1px rgba(0,0,0,.5);
-    } */
 }
 .mini_gallery ul{
     list-style: none;
@@ -337,6 +301,8 @@ body{
 .footer-right{
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
+    min-width: 160px;
     margin-right: 3em;
 }
 .footer-right a{
@@ -352,7 +318,7 @@ body{
     flex-direction: column;
 }
 .footer-left img{
-    width: 25%;    
+    width: 15%;    
 }
 .links-title{
     margin-top: 10px;
